# hardenedBSD-playground

./: .gitignore  Makefile.inc1  Makefile.libcompat  ObsoleteFiles.inc  UPDATING  UPDATING-HardenedBSD  build_rpi3.sh
cddl/lib/libzfs/: Makefile
cddl/lib/libzpool/: Makefile
cddl/sbin/zfs/: Makefile
cddl/usr.bin/zstreamdump/: Makefile
cddl/usr.bin/ztest/: Makefile
cddl/usr.sbin/zdb/: Makefile
contrib/gcc/config/: freebsd-spec.h
contrib/less/: command.c
contrib/libarchive/libarchive/: archive_read_support_format_iso9660.c
contrib/libarchive/tar/: bsdtar.1
contrib/mdocml/: mandocdb.c  mansearch.h  mansearch_const.c  mdoc.c  mdoc.h  mdoc_argv.c  mdoc_html.c  mdoc_macro.c  mdoc_man.c  mdoc_term.c  mdoc_validate.c  roff.c
contrib/nvi/cl/: cl_term.c
contrib/telnet/telnet/: commands.c
contrib/tnftp/: ChangeLog  NEWS  THANKS
contrib/tnftp/security-patches/: 20141028-ftp-fetch-redirect.patch
contrib/tnftp/src/: fetch.c  ssl.h
drivers/gpu/drm/: drm_fops.c
etc/: Makefile  hbsd-update.conf  login.conf
etc/defaults/: rc.conf
etc/mtree/: BSD.root.dist  BSD.usr.dist
etc/pkg/: HardenedBSD.conf
etc/rc.d/: Makefile
gnu/lib/libgcc/: Makefile
include/: unistd.h
include/drm/: drmP.h
lib/: Makefile
lib/clang/: llvm.build.mk  llvm.cfi.mk
lib/clang/libllvm/: Makefile
lib/csu/amd64/: Makefile
lib/csu/i386/: Makefile
lib/libarchive/: Makefile
lib/libbe/: be.c
lib/libc/: Makefile
lib/libc/stdlib/: reallocarray.c
lib/libc/string/: Makefile.inc  Symbol.map  strlcpy.c
lib/libc/sys/: Makefile.inc  Symbol.map  getdtablecount.2
lib/libclang_rt/: Makefile
lib/libclang_rt/cfi/: Makefile
lib/libclang_rt/safestack/: Makefile
lib/libcompiler_rt/: Makefile
lib/libgcc_eh/: Makefile
lib/libifconfig/: Makefile
lib/libproc/: Makefile  proc_bkpt.c  proc_regs.c
lib/libstand/: stand.h
lib/libvmmapi/: vmmapi.c  vmmapi.h
libexec/rc/: rc.conf
libexec/rtld-elf/: Makefile  rtld.c
release/: Makefile  release.sh
release/amd64/: make-memstick.sh  mkisoimages.sh
release/arm64/: make-memstick.sh
release/scripts/: make-manifest.sh
rescue/librescue/: Makefile
rescue/rescue/: Makefile
rpi3/: config.txt
sbin/camcontrol/: camcontrol.c
sbin/devd/: Makefile  devd.conf
sbin/dhclient/: Makefile  dhclient.c
sbin/growfs/: growfs.c
sbin/ifconfig/: Makefile  ifconfig.c
sbin/init/: Makefile  init.c  rc.conf
sbin/md5/: Makefile
sbin/nvmecontrol/: Makefile
sbin/pfctl/: parse.y  pfctl.c  pfctl_parser.c
secure/lib/: Makefile
secure/usr.bin/: Makefile
share/examples/: Makefile
share/mk/: bsd.crunchgen.mk  bsd.init.mk  bsd.lib.mk  bsd.libnames.mk  bsd.opts.mk  bsd.own.mk  bsd.prog.mk  bsd.sys.mk  bsd.test.mk  src.libnames.mk  src.opts.mk  sys.mk
stand/: defs.mk  loader.mk
stand/defaults/: loader.conf
stand/i386/: Makefile.inc
sys/: Makefile
sys/boot/: Makefile  Makefile.inc
sys/boot/arm64/rpi/boot-wrapper-aarch64/: FDT.pm  Makefile.am  boot.S  cache.S  common.S  configure.ac  gen-cpu-nodes.sh  gic-v3.S  gic.S  mmu.S  model.lds.S  ns.S  psci.S  spin.S
sys/conf/: NOTES  files  files.amd64  files.arm64  files.i386  files.pc98  files.sparc64  kern.mk  kern.opts.mk  kern.pre.mk  kmod.mk  ldscript.amd64  newvers.sh  options  options.amd64  options.arm64  options.i386
sys/ddb/: db_ps.c  ddb.h
sys/dev/md/: md.c
sys/hardenedbsd/: hbsd_pax_aslr.c  hbsd_pax_common.c  hbsd_pax_hardening.c  hbsd_pax_log.c  hbsd_pax_noexec.c  hbsd_pax_segvguard.c
sys/i386/: Makefile
sys/kern/: imgact_elf.c  init_main.c  init_sysent.c  kern_cpuset.c  kern_descrip.c  kern_exec.c  kern_fork.c  kern_jail.c  kern_ktrace.c  kern_linker.c  kern_mib.c  kern_priv.c  kern_proc.c  kern_prot.c  kern_racct.c  kern_resource.c  kern_sharedpage.c  kern_shutdown.c  kern_sig.c  kern_sx.c  kern_sysctl.c  kern_thr.c  kern_thread.c  subr_bus.c  subr_gtaskqueue.c  subr_prf.c  subr_sbuf.c  subr_trap.c  subr_witness.c  sys_generic.c  sys_process.c  syscalls.c  syscalls.master  systrace_args.c  uipc_usrreq.c  vfs_default.c  vfs_mount.c  vfs_subr.c  vfs_syscalls.c  vnode_if.src
sys/libkern/: iconv.c
sys/modules/: Makefile
sys/net/: pfvar.h
sys/netgraph/: ng_base.c  ng_eiface.c  ng_iface.c
sys/netinet/: ip_icmp.c  ip_input.c  ip_reass.c
sys/netinet6/: in6_proto.c  in6_src.c  nd6_rtr.c
sys/nk/: common.h  cpufunc.h  debug.h  design.txt  nk_cpufunc.c  nk_cpufunc.h  pmmu.c  pmmu.h  stack.h  vmmu.c  vmmu.h  wr_prot.h
sys/opencrypto/: cryptodev.h  cryptosoft.c  xform_aes_icm.c  xform_auth.h
sys/sys/: cdefs.h  elf_common.h  imgact.h  imgact_elf.h  jail.h  kernel.h  mount.h  pax.h  priv.h  proc.h  random.h  sbuf.h  signalvar.h  syscall.h  syscall.mk  sysctl.h  sysent.h  sysproto.h
sys/vm/: uma.h  uma_core.c  uma_int.h  vm_glue.c  vm_map.c  vm_map.h  vm_mmap.c  vm_object.c  vm_phys.c  vm_phys.h  vm_unix.c
tools/: build_minimal_world.csh
tools/boot/: install-boot.sh
tools/minimal/: build_minimal_world.csh  distribute_minimal_world.csh  do-magic.csh  make-minimal-memstick.sh
usr.bin/: Makefile
usr.bin/clang/: clang.prog.mk  llvm.prog.mk
usr.bin/column/: column.c
usr.bin/cpuset/: cpuset.c
usr.bin/ftp/: tnftp_config.h
usr.bin/kdump/: kdump.c
usr.bin/less/: Makefile
usr.bin/login/: login.conf  motd.template
usr.bin/mkcsmapper_static/: Makefile
usr.bin/mkesdb_static/: Makefile
usr.bin/nfsstat/: nfsstat.c
usr.bin/proccontrol/: proccontrol.c
usr.bin/procstat/: procstat_auxv.c
usr.bin/top/: Makefile
usr.bin/tsort/: Makefile
usr.bin/vi/: Makefile
usr.sbin/: Makefile
usr.sbin/arp/: Makefile
usr.sbin/bhyve/: Makefile  bhyverun.c  block_if.c  consport.c  pci_ahci.c  pci_e82545.c  pci_passthru.c  pci_virtio_rnd.c  uart_emul.c  xmsr.c
usr.sbin/bhyvectl/: bhyvectl.c
usr.sbin/bhyveload/: Makefile
usr.sbin/hbsd-update/: hbsd-update-build  hbsd-update.conf
usr.sbin/inetd/: Makefile
usr.sbin/jail/: jail.8
usr.sbin/newsyslog/: newsyslog.conf
usr.sbin/pkg/: Makefile
usr.sbin/ppp/: Makefile
usr.sbin/rpc.lockd/: Makefile
usr.sbin/rtsold/: Makefile
usr.sbin/sendmail/: Makefile
usr.sbin/services_mkdb/: Makefile
(+421 files in other folders)
